[tool.poetry]
name = "password-validator"
version = "0.1.0"
description = "Password validation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "password_validator", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
